# notaro

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
apps/desktop/: README.md  eslint.config.js  package.json  pnpm-lock.yaml
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Editor.svelte  SettingsModal.svelte  Sidebar.svelte
apps/desktop/src/lib/: historyStore.svelte.ts  noteStore.svelte.ts  settingsStore.svelte.ts
apps/desktop/src/routes/: +page.svelte
apps/mobile/: .gitignore  README.md  analysis_options.yaml  package.json  pubspec.yaml
apps/mobile/android/: .gitignore
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/: .gitignore
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: app_constants.dart  main.dart  oss_licenses.dart
apps/mobile/lib/l10n/: intl_en.arb
apps/mobile/lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/mobile/rust/: Cargo.toml
apps/mobile/rust/src/: frb_generated.rs
apps/mobile/rust/src/api/: native.rs
apps/mobile/test/: widget_test.dart
apps/server/: Cargo.toml  NOTICE  README.md
apps/web/: README.md  package.json  pnpm-lock.yaml
(+29 files in other folders)
