[workspace]
resolver = "2"
members = [
    "packages/core",
    "apps/server",
    "apps/desktop/src-tauri",
    "apps/mobile/rust"
]

# Optional: Define shared profiles for faster builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
