[package]
name = "rust_lib_notaro_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
notaro_core = { path = "../../../packages/core" }
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.100"
lazy_static = "1.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
